--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "marvel-api": "^1.1.0"
   },
   "engines": {
     "node": "8.x"
